Completamento generazione GCODE di una immagine con scanning orizzontale

--- a/Elaborato-EdS-2021/Elaborato-EdS-2021.csproj
+++ b/Elaborato-EdS-2021/Elaborato-EdS-2021.csproj
@@ -8,10 +8,11 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Elaborato_EdS_2021</RootNamespace>
     <AssemblyName>Elaborato-EdS-2021</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
