Sviluppo parte conversione Testo in GCODE

--- a/Elaborato-EdS-2021/Elaborato-EdS-2021.csproj
+++ b/Elaborato-EdS-2021/Elaborato-EdS-2021.csproj
@@ -59,6 +59,12 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTesto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTesto.Designer.cs">
+      <DependentUpon>FormTesto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormConvertImg.resx">
@@ -66,6 +72,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTesto.resx">
+      <DependentUpon>FormTesto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
